--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.11.4",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
